# tinydag

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE-MIT  README.md  TODO.md  build.rs
.github/workflows/: ci.yml  release.yml
design/: 01-vision.md  02-concepts.md  03-pipeline-authoring.md  04-operator-model.md  05-observability.md  06-internals.md  07-roadmap.md  08-open-questions.md
examples/: README.md  diamond-etl.json  diamond-etl.star
examples/tasks/: transform_a.py
proto/: operator_control.proto
src/: compiler.rs  control_server.rs  dag.rs  executor.rs  ir.rs  lib.rs  main.rs  runner.rs  scheduler.rs  telemetry.rs  validation.rs
src/operators/: bash.rs  mod.rs  python.rs  runtime.rs
